--- a/api/v1/paths/organizations/portfolio/_index.yaml
+++ b/api/v1/paths/organizations/portfolio/_index.yaml
@@ -1,3 +1,38 @@
+get:
+  tags:
+    - organizations
+  summary: Get all portfolios for contractor
+  description: |-
+    Получает список всех портфолио для исполнителя.
+  security:
+    - bearerAuth: []
+  parameters:
+    - name: organizationID
+      in: path
+      required: true
+      description: Уникальный идентификатор организации
+      schema:
+        type: integer
+        minimum: 1
+      example: 1
+  responses:
+    '200':
+      description: Список портфолио
+      content:
+        application/json:
+          schema:
+            type: object
+            required:
+              - data
+            properties:
+              data:
+                type: array
+                items:
+                  $ref: "../../../schemas/Portfolio.yaml"
+                maxItems: 10
+    default:
+      $ref: "../../../responses/Error.yaml"
+
 post:
   tags:
     - organizations
@@ -6,6 +41,14 @@ post:
     Добавляет портфолио в профиль исполнителя.
   security:
     - bearerAuth: []
+  parameters:
+    - name: organizationID
+      required: true
+      in: path
+      description: ID of organization
+      schema:
+        type: integer
+        minimum: 1
   requestBody:
     required: true
     content:
