--- a/api/v1/paths/organizations/profile/contractor.yaml
+++ b/api/v1/paths/organizations/profile/contractor.yaml
@@ -6,6 +6,14 @@ put:
     Обновляет профиль исполнителя.
   security:
     - bearerAuth: []
+  parameters:
+    - name: organizationID
+      required: true
+      in: path
+      description: ID of organization
+      schema:
+        type: integer
+        minimum: 1
   requestBody:
     required: true
     content:
