--- a/api/v1/paths/organizations/profile/customer.yaml
+++ b/api/v1/paths/organizations/profile/customer.yaml
@@ -6,6 +6,14 @@ put:
     Обновляет описание компании или список локаций в профиле заказчика.
   security:
     - bearerAuth: []
+  parameters:
+    - name: organizationID
+      required: true
+      in: path
+      description: ID of organization
+      schema:
+        type: integer
+        minimum: 1
   requestBody:
     required: true
     content:
