--- a/api/v1/paths/users/_id/_index.yaml
+++ b/api/v1/paths/users/_id/_index.yaml
@@ -32,3 +32,43 @@ get:
                 $ref: "../../../schemas/RegularUser.yaml"
     default:
       $ref: "../../../responses/Error.yaml"
+
+put:
+  tags:
+    - users
+  summary: Update user profile
+  description: |-
+   Обновляет информацию профиля пользователя.
+  security:
+  - bearerAuth: []
+  parameters:
+    - name: userID
+      required: true
+      in: path
+      description: ID of user
+      schema:
+        type: integer
+        minimum: 1
+      example: 1
+  requestBody:
+    required: true
+    content:
+      application/json:
+        schema:
+          type: object
+          properties:
+            first_name:
+              $ref: "../../../properties/name.yaml"
+            last_name:
+              $ref: "../../../properties/name.yaml"
+            middle_name:
+              $ref: "../../../properties/name.yaml"
+            phone:
+              $ref: "../../../properties/phone.yaml"
+            avatar_url:
+              $ref: "../../../properties/url.yaml"
+  responses:
+    '200':
+      description: Success
+    default:
+      $ref: "../../../responses/Error.yaml"
