--- a/api/v1/schemas/Organization.yaml
+++ b/api/v1/schemas/Organization.yaml
@@ -16,6 +16,8 @@ required:
   - emails
   - phones
   - messengers
+  - customer_info
+  - contractor_info
   - created_at
   - updated_at
 properties:
