--- a/api/v1/paths/organizations/profile/contractor.yaml
+++ b/api/v1/paths/organizations/profile/contractor.yaml
@@ -23,18 +23,17 @@ put:
           properties:
             description:
               $ref: "../../../properties/description.yaml"
-            cities:
-              type: array
-              description: Локации заказчика
-              items:
-                type: integer
-                example: 1
-            services:
+            city_ids:
               type: array
               items:
                 type: integer
-                example: [1, 2]
-            objects:
+              example: [1, 2]
+            service_ids:
+              type: array
+              items:
+                type: integer
+              example: [1, 2]
+            objects_ids:
               type: array
               items:
                 type: integer
