--- a/api/bundle.yaml
+++ b/api/bundle.yaml
@@ -213,13 +213,14 @@ paths:
         - tenders
       summary: Get tenders
       description: |-
-        Returns all tenders
+        **Без JWT или с ролью "User"**:
+        Возвращает тендеры только со статусом "Approved".
 
-        Для получения всех тендеров (включая неверифицированные)
-        **[Role](https://youtrack.ubrato.ru/articles/UBR-A-7/Roli-privilegii) required**:
-        'Employee' or higher.
+        **Для сотрудников ("Employee") и выше**:
+        Возвращает все тендеры, включая неверифицированные.
       security:
         - bearerAuth: []
+        - {}
       parameters:
         - name: verified
           in: query
@@ -227,40 +228,23 @@ paths:
           schema:
             type: boolean
             default: true
-        - name: offset
+        - name: page
           in: query
-          description: Сдвиг начала каждой страницы на указанное количество единиц.
+          description: Номер страницы
+          required: false
           schema:
             type: integer
-            minimum: 0
             default: 0
-        - name: limit
+            minimum: 0
+        - name: per_page
           in: query
-          description: Максимальное количество объектов, которое может вернуть запрос.
+          description: Количество элементов на странице
+          required: false
           schema:
             type: integer
-            minimum: 0
+            minimum: 1
             maximum: 100
             default: 100
-        - name: sort
-          in: query
-          description: Определяет атрибут, по которому сортируются элементы.
-          schema:
-            type: string
-            enum:
-              - id
-            default: id
-        - name: direction
-          in: query
-          description: |-
-            Направление сортировки результатов.
-            Это может быть либо сортировка по возрастанию (ASC), либо сортировка по убыванию (DESC).
-          schema:
-            type: string
-            enum:
-              - ASC
-              - DESC
-            default: ASC
       responses:
         '200':
           description: Success
@@ -270,11 +254,14 @@ paths:
                 type: object
                 required:
                   - data
+                  - pagination
                 properties:
                   data:
                     type: array
                     items:
                       $ref: '#/components/schemas/Tender'
+                  pagination:
+                    $ref: '#/components/schemas/Pagination'
         default:
           $ref: '#/components/responses/Error'
     post:
@@ -2630,6 +2617,22 @@ components:
         updated_at:
           type: string
           format: date-time
+    Pagination:
+      type: object
+      required:
+        - page
+        - pages
+        - per_page
+      properties:
+        page:
+          type: integer
+          example: 0
+        pages:
+          type: integer
+          example: 10
+        per_page:
+          type: integer
+          example: 100
     role:
       type: string
       enum:
