--- a/api/v1/properties/url.yaml
+++ b/api/v1/properties/url.yaml
@@ -1,3 +1,3 @@
 type: string
-pattern: ^https?:\/\/[-a-zA-Z0-9@:%._\+~#=]{1,256}\.[a-zA-Z0-9()]{1,6}\b(?:[-a-zA-Z0-9()@:%_\+.~#?&\/=]*)$
+pattern: ^https?:\/\/[-a-zA-Z0-9а-яА-Я@:%._\+~#=]{1,256}\.[a-zA-Z0-9а-яА-Я()]{1,6}\b(?:[-a-zA-Z0-9а-яА-Я()@:%_\+.~#?&\/=]*)$
 example: https://s3.ubrato.ru/qwerty
