--- a/api/v1/paths/verifications/_id/deny.yaml
+++ b/api/v1/paths/verifications/_id/deny.yaml
@@ -18,6 +18,18 @@ post:
         type: integer
         minimum: 1
       example: 1
+  requestBody:
+    required: true
+    content:
+      application/json:
+        schema:
+          type: object
+          required:
+            - review_comment
+          properties:
+            review_comment:
+              type: string
+              example: The provided documents do not meet the verification criteria.
   responses:
     '200':
       description: Success
