--- a/api/v1/paths/organizations/profile/contractor.yaml
+++ b/api/v1/paths/organizations/profile/contractor.yaml
@@ -49,6 +49,51 @@ put:
               - data
             properties:
               data:
-                $ref: "../../../schemas/Organization.yaml"
+                type: object
+                required:
+                  - organization
+                  - profile
+                properties:
+                  organization:
+                    $ref: "../../../schemas/Organization.yaml"
+                  profile:
+                    $ref: "../../../schemas/ContractorInfo.yaml"
+    default:
+      $ref: "../../../responses/Error.yaml"
+
+get:
+  tags:
+    - organizations
+  summary: Get contractor organization profile
+  description: |-
+    Возвращает информацию об организации и профиле исполнителя.
+  parameters:
+    - name: organizationID
+      required: true
+      in: path
+      description: ID of organization
+      schema:
+        type: integer
+        minimum: 1
+  responses:
+    '200':
+      description: Success
+      content:
+        application/json:
+          schema:
+            type: object
+            required:
+              - data
+            properties:
+              data:
+                type: object
+                required:
+                  - organization
+                  - profile
+                properties:
+                  organization:
+                    $ref: "../../../schemas/Organization.yaml"
+                  profile:
+                    $ref: "../../../schemas/ContractorInfo.yaml"
     default:
       $ref: "../../../responses/Error.yaml"
